foi acrescentado ao projeto o CSS

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -33,18 +36,14 @@
     </ul>
 
     <div id="área-1">
-        <p>Área 001</p>
+        <p class="primeiro"> Quarto 001</p>
     </div>
-
-    <div id="[área-2">
-        <p>Área 002</p>
-    </div>
-
-    <div id="área-3">
-    <p>
-        Área 003
-    </p>
-    </div>
+    
+    <style>
+        body {
+            background-image: linear-gradient(to right, rgba(138, 170, 10, 0.596), rgba(3, 0, 0, 0.822));
+        }
+    </style>
 
 </body>
 
